Prevent overflow cutoff outside the calculator

--- a/style.css
+++ b/style.css
@@ -38,26 +38,22 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  overflow: clip;
   height: 13vh;
-  margin-left: 8px;
+  margin-left: 11px; /* When display overflows and clips, it leaves less margin than the right side */
   margin-right: 8px;
-  padding-left: 5px;
-  padding-right: 5px;
 }
 
 #display-operation {
-  flex: none;
+
   color: #e7e6e6;
   font-size: 3vh;
   height: 3vh;
 }
 
 #display {
-  flex: none;  
   font-size: 9vh;
   line-height: 9vh;
-  overflow: hidden;
-  text-overflow: clip;
   color: #e7e6e6;
   padding-top: 5px;
 }
